# datamininglab

./: .gitignore  README.md  datamininglab.yml  manage.py  pyproject.toml  pytest.ini
contact/: urls.py  views.py
contact/templates/contact/: contact.html  success.html
datamininglab/: asgi.py  settings.py  urls.py  wsgi.py
main/: admin.py  api.py  forms.py  models.py  serializers.py  throttles.py  urls.py  validators.py  views.py
main/fixtures/: auth_group.json  auth_permission.json
main/management/commands/: createenv.py  creategpt.py
main/migrations/: 0001_initial.py  0002_alter_main_models.py  0002_populate_sampletypes.py  0003_populate_auth.py  0003_populate_auth.py_
main/serializers/: main_serializers.py  sample_type_serializers.py
main/static/main/css/: styles.css
main/templates/main/: about.html  api.html  base.html  contact.html  create.html  database.html  experiment_form.html  impressum.html  index.html  login.html  sample_form.html  staff_form.html  use.html  user_form.html  web.html
main/templates/main/crud/: experiment_create.html  experiment_delete.html  experiment_detail.html  experiment_list.html  experiment_update.html  fundingbody_create.html  fundingbody_delete.html  fundingbody_detail.html  fundingbody_list.html  fundingbody_update.html  institute_detail.html  institute_list.html  (+28 more)
main/templatetags/: template_extras.py
main/utils/: email_utils.py  file_utils.py  validation_utils.py
media/sample_info/: 060504_135615_045001.json
static/main/css/: styles.css
templates/: 404.html  500.html
tests/: test_collections.py
(+4 files in other folders)
