[tool.poetry]
name = "datamininglab"
version = "0.1.0"
description = ""
authors = ["Thomas Buchwald <thomas.buchwald@tu-freiberg.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
django-widget-tweaks = "^1.5.0"
djangorestframework = "^3.14.0"
mysqlclient = "^2.2.0"
python-decouple = "^3.8"
drf-spectacular = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
