[tool.poetry]
name = "datamininglab"
version = "0.2.0"
description = ""
authors = ["Thomas Buchwald <thomas.buchwald@tu-freiberg.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
django-widget-tweaks = "^1.5.0"
djangorestframework = "^3.14.0"
python-decouple = "^3.8"
drf-spectacular = "^0.27.0"
psycopg = {extras = ["binary"], version = "^3.1.17"}
whitenoise = "^6.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-django = "^4.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
